# UDT

./: .gitignore  CMakeLists.txt  INSTALL.md  QuickStart.md  README.md  gitblah-sqwe  main.yml  todo.txt
SHARE/: CMakeLists.txt  ChangeLog  ChangeLog.txt
SHARE/CMakeModules/: FindGlog.cmake  FindSharedPtr.cmake  FindVTune.cmake  HelperFind.cmake  SHAREMacros.cmake  config.h.cmake  configure_CPack.cmake  configure_SHARE.cmake  configure_doxygen.cmake  configure_share.cmake  dependencies_search.cmake  helper_cmake_function.cmake  share_function.cmake  share_trace_config.h.cmake
SHARE/CMakeModules/find/: FindGlog.cmake  FindLog4cplus.cmake  Findrapidjson.cmake  Findtclap.cmake
SHARE/CMakeModules/functions/: configure_CPack.cmake  helper_cmake_function.cmake  package_matlab.cmake  package_python.cmake
SHARE/CMakeModules/toolchain/: toolchain-QNX-6.3.0-arm-be.cmake  toolchain-QNX-6.3.0-arm-le.cmake  toolchain-QNX-6.3.0-mips-be.cmake  toolchain-QNX-6.3.0-mips-le.cmake  toolchain-QNX-6.3.0-ppc.cmake  toolchain-QNX-6.3.0-x86.cmake  toolchain-QNX-6.3.0.cmake  toolchain-QNX-6.3.2.cmake  toolchain-QNX-6.4.0.cmake  toolchain-QNX-6.4.1.cmake  toolchain-QNX-6.5.0.cmake  toolchain-QNX-6.5.1.cmake  toolchain-QNX-6.6.cmake  toolchain-QNX-common.cmake
SHARE/dependencies/: CMakeLists.txt
SHARE/dependencies/glog/: config.h  stacktrace_x86-inl.h
SHARE/dependencies/log4cplus-1.2.x/: CMakeLists.txt
SHARE/doc/: doxygen.conf  doxygen.conf.in
SHARE/examples/: CMakeLists.txt
SHARE/examples/sharedmemory/: CMakeLists.txt
SHARE/include/: FloatCompare.h  Net.h  Pipe.h  SerialPort.h  TestingConfig.h  console.h  crc16.h  crc8.h  deftype  dymamic_modules.h  endian_type.h  fdir.h  get_cpuid.h  log_signal_handler.h  macro_attributes.h  profiler_vtune.h  random_value.h  revision.h  share_cout_log.h  share_nolog.h  share_socket.h  share_trace.h  share_trace_log4cplus.h  sm_socket.h  socket.h  tasks.h  type_manip.h  type_utf8.h  uclock.h  unit_tests.h  win_processor_detection.h  win_unistd.h
SHARE/include/SHARE/: FloatCompare.h  Net.h  Pipe.h  SerialPort.h  crc16.h  crc8.h  endian_type.h  fdir.h  macro_attributes.h  matlab_serialize.h  revision.h  share_socket.h  sm_socket.h  socket.h  tasks.h  type_manip.h  uclock.h  win_processor_detection.h
SHARE/include/Socket/: CAsynchronousSocket.h  CDex.h  CFIFOServer.h  CFIFOServerPosixImpl.h  CFIFOServerWin32Impl.h  CFifo.h  CFifoPosixImpl.h  CFifoWin32Impl.h  CLoopBack.h  CNetBase.h  CRS485.h  CSPPosixImp.h  CSPWin32Impl.h  CSeleclSocketPosix.h  CSelectSocket.h  CSerialPort.h  CSharedMemoryBase.h  CSharedMemoryBaseImpl.h  CSharedMemoryClient.h  CSharedMemoryClientImpl.h  CSharedMemoryImplTypes.h  CSharedMemoryServer.h  CSharedMemoryServerImpl.h  CSocket.h  CSocketFile.h  CTCP.h  CTCPSelectReceiver.h  CTCPServer.h  CTCPServerImpl.h  CTcpClientImpl.h  CTcpImplBase.h  CUDP.h  CUnix.h  INet.h  ISerial.h  ISocket.h  SerialFunction.h  SerialFunction_impl.h  diagnostic_io_t.h  net_address_t.h  (+4 more)
SHARE/include/UType/: CAddress.h  CAntiHang.h  CAssertException.h  CBarrier.h  CBuffer.h  CCOWPtr.h  CCOWPtrTest.h  CCheckNoMultiThread.h  CCodeConv.h  CCommonAllocater.h  CCondvar.h  CConfig.h  CCounter.h  CDenyCopying.h  CEvent.h  CEvent.hpp  CEvents.h  CEvents.hpp  CFactoryManager.h  CFactoryRegisterer.h  CFile.h  CFlags.h  CIPCMutex.h  CIPCSem.h  CIPCSignalEvent.h  CIntrusived.h  CMutex.h  CMutexEmpty.h  CPFile.h  CRAII.h  CResources.h  CSafeData.h  CSafeData.hpp  CSafeDataPosix.h  CSafeDataWin32.h  CSafeQueue.h  CSemaphore.h  CSharedAllocator.h  CSharedCounter.h  CSharedMemory.h  (+32 more)
SHARE/include/logging/: CShareLogArgsParser.h  CStackTrace.h  CTraceToSocket.h  log_signal_handler.h  share_cout_log.h  share_dellog.h  share_nolog.h  share_trace.h  share_trace_log4cplus.h  trace_macros.h  vlog_is_on.h
SHARE/include/share/: Net.h  Pipe.h  SerialPort.h  crc16.h  get_cpuid.h  macro_attributes.h  profiler_vtune.h  random_value.h  revision.h  share_socket.h  sm_socket.h  socket.h  tasks.h  type_manip.h  uclock.h  win_processor_detection.h
SHARE/src/: CMakeLists.txt  ChangeLog.txt  console.cpp  dymamic_modules.cpp  fdir.cpp  get_cpuid.cpp  getopt_msvc.c  getsubopt.c  random_value.cpp  revision.c  revision.c.in  revision.c.temp  revision.h.in  tasks.cpp  test.cpp  trace_log4cplus.cpp  trace_share.cpp  uclock.cpp
SHARE/src/Socket/: CAsynchronousSocket.cpp  CFIFOServer.cpp  CFIFOServerPosixImpl.cpp  CFIFOServerWin32Impl.cpp  CFifo.cpp  CFifoPosixImpl.cpp  CFifoWin32Impl.cpp  CLoopBack.cpp  CNetBase.cpp  CRS485.cpp  CSPPosixImp.cpp  CSPWin32Impl.cpp  CSeleclSocketPosix.cpp  CSelectSocket.cpp  CSerialPort.cpp  CSharedMemoryBase.cpp  CSharedMemoryBaseImpl.cpp  CSharedMemoryClient.cpp  CSharedMemoryClientImpl.cpp  CSharedMemoryServer.cpp  CSharedMemoryServerImpl.cpp  CSocket.cpp  CSocketFile.cpp  CTCP.cpp  CTCPSelectReceiver.cpp  CTCPServer.cpp  CTCPServerImpl.cpp  CTcpClientImpl.cpp  CTcpImplBase.cpp  CUDP.cpp  CUnix.cpp  SerialFunction.cpp  diagnostic_io_t.cpp  net_address_t.cpp  net_function.cpp  socket_parser.cpp
SHARE/src/UType/: CAddress.cpp  CBarrier.cpp  CBaseObject.cpp  CBuffer.cpp  CCheckNoMultiThread.cpp  CCodeConv.cpp  CCommonAllocater.cpp  CCondvarPosix.cpp  CCondvarWin32.cpp  CConfig.cpp  CFile.cpp  CIPCSemPosix.cpp  CIPCSemWin32.cpp  CIPCSignalEventPosix.cpp  CIPCSignalEventWIN32.cpp  CIntrusived.cpp  CMutexEmpty.cpp  CMutexPosix.cpp  CText.cpp  (+19 more)
SHARE/tests/: CMakeLists.txt
SHARE/tools/: CMakeLists.txt
UDT/: CMakeLists.txt
UDT/CMakeModules/: FindSHARE.cmake  FindUDT.cmake  Findtclap.cmake  GetGitRevisionDescription.cmake  SHAREMacros.cmake  UDT_CPack.cmake  config.h.cmake  configure_CPack.cmake  configure_UDT.cmake  configure_doxygen.cmake  dependencies_search.cmake  helper_cmake_function.cmake  udt_function.cmake
UDT/doc/: INSTALL.md  about_send.dox  api_doc.dox  doxygen.conf  doxygen.conf.in  doxygen.css  gen_protocol.dox  main_page.dox  sysadmin_doc.dox
UDT/examples/: CMakeLists.txt  kernel.json
UDT/examples_old/: CMakeLists.txt
UDT/src/: CMakeLists.txt  revision.c.in
UDT/tests/: CMakeLists.txt  test_kernel.json
UDT/tools/: CMakeLists.txt
(+865 files in other folders)
