PROJECT(${PROJECT_NAME}_examples C CXX)	

add_subdirectory(example_easy_program)

add_subdirectory(example_working_by_user_protocol)
add_subdirectory(example_of_user_protocol_parser)

add_subdirectory(example_easy_msg_receiver)
add_subdirectory(example_of_sending_msg)
add_subdirectory(example_of_sniffing_messages)
#add_subdirectory(example_customer_user_protocol)

#add_subdirectory(example_customer3)		
add_subdirectory(example_of_sending_to_specific_program)
#add_subdirectory(example_parser_error)		
#add_subdirectory(example_parser_error2)
#add_subdirectory(example_customer_error)
#add_subdirectory(example_customer_version_error)
add_subdirectory(example_of_quick_answer_to_sender)
add_subdirectory(example_of_auto_change_byte_order)


					